--- a/intro-questions/index.html
+++ b/intro-questions/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div id="header">
-        <h1>Hello World :-)</h1>
+        <h1>Intro Questions :-)</h1>
     </div>
     <ol>
         <li>My name is Vicky Prisco and I am a senior computer science major with a HCI minor.</li>
