--- a/microsite/final/index.html
+++ b/microsite/final/index.html
@@ -19,7 +19,7 @@
     </header>
     <h1 id="title">David Hume</h1>
     <div id="img-ctr">
-      <img src="media/hume.png">
+      <img id="hume" src="media/hume.png">
     </div>
     <p>
       David Hume (/hjuːm/; born David Home; 7 May 1711 – 25 August 1776) was a
